--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,4 +1,4 @@
-FROM golang:1.23.4-alpine as dev
+FROM golang:1.23.4-alpine AS dev
 WORKDIR /app
 RUN go install github.com/air-verse/air@latest
 CMD ["air", "-c", ".air.toml"]
