--- a/compose.yml
+++ b/compose.yml
@@ -18,21 +18,18 @@ services:
       - 5432:5432
     volumes:
       - ./.data/postgres:/var/lib/postgresql/data
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_INITDB_ARGS: "--encoding=UTF-8"
-      POSTGRES_DB: ${POSTGRES_DATABASE}
+    env_file:
+      - ./app/.env
   pgadmin:
     image: dpage/pgadmin4:latest
     container_name: pgadmin-huma
     ports:
-      - 81:80
+      - 8081:80
     environment:
-      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_EMAIL}
-      PGADMIN_DEFAULT_PASSWORD: ${POSTGRES_PASSWORD}
       PGADMIN_CONFIG_SERVER_MODE: "False"
       PGADMIN_CONFIG_MASTER_PASSWORD_REQUIRED: "False"
+    env_file:
+      - ./app/.env
     volumes:
       - ./.data/pgadmin:/var/lib/pgadmin
     depends_on:
