--- a/app/sqlc.yaml
+++ b/app/sqlc.yaml
@@ -1,10 +1,10 @@
 version: "2"
 sql:
   - engine: "postgresql"
-    queries: "query.sql"
-    schema: "schema.sql"
+    queries: "db/query.sql"
+    schema: "db/schema.sql"
     gen:
       go:
         package: "sqlc"
-        out: "sqlc"
+        out: "db/sqlc"
         sql_package: "pgx/v5"
