--- a/app/sqlc.yaml
+++ b/app/sqlc.yaml
@@ -8,3 +8,5 @@ sql:
         package: "sqlc"
         out: "db/sqlc"
         sql_package: "pgx/v5"
+        emit_json_tags: true
+        emit_empty_slices: true
