fix: Change compose.yml and env

--- a/compose.yml
+++ b/compose.yml
@@ -1,6 +1,6 @@
 services:
   go:
-    container_name: go-huma
+    container_name: go-huma-sqlc
     volumes:
       - ./app/:/app/
     tty: true
@@ -13,16 +13,16 @@ services:
       - postgres
   postgres:
     image: postgres:17-alpine
-    container_name: postgres-huma
+    container_name: go-huma-sqlc-postgres
     ports:
       - 5432:5432
     volumes:
-      - ./.data/postgres:/var/lib/postgresql/data
+      - postgres-volume:/var/lib/postgresql/data
     env_file:
       - ./app/.env
   pgadmin:
     image: dpage/pgadmin4:latest
-    container_name: pgadmin-huma
+    container_name: go-huma-sqlc-pgadmin
     ports:
       - 8081:80
     environment:
@@ -31,6 +31,10 @@ services:
     env_file:
       - ./app/.env
     volumes:
-      - ./.data/pgadmin:/var/lib/pgadmin
+      - pgadmin-volume:/var/lib/pgadmin
     depends_on:
       - postgres
+
+volumes:
+  postgres-volume:
+  pgadmin-volume:
