--- a/app/.env.example
+++ b/app/.env.example
@@ -1,7 +1,7 @@
-POSTGRES_DATABASE=demo
+POSTGRES_DB=demo
 POSTGRES_USER=user
 POSTGRES_PASSWORD=password
 POSTGRES_PORT=5432
 POSTGRES_HOST=postgres
-PGADMIN_EMAIL=hoge@example.com
-PGADMIN_PASSWORD=password
+PGADMIN_DEFAULT_EMAIL=hoge@example.com
+PGADMIN_DEFAULT_PASSWORD=password
