rename: Change project structure

--- a/app/.air.toml
+++ b/app/.air.toml
@@ -9,7 +9,7 @@ tmp_dir = "tmp"
 # Array of commands to run before each build
 pre_cmd = ["echo 'hello air'"]
 # Just plain old shell command. You could use `make` as well.
-cmd = "go build -o ./tmp/main ."
+cmd = "go build -o ./tmp/main ./cmd/app/."
 # Array of commands to run after ^C
 post_cmd = ["echo 'hello air'"]
 # Binary file yields from `cmd`.
